change reservation img and fix spacing/paragraph font size on mobile

--- a/client/shisha-rent/src/components/customer/home/Home.module.scss
+++ b/client/shisha-rent/src/components/customer/home/Home.module.scss
@@ -65,6 +65,7 @@
       transform: translateX(-50%);
 
       img {
+        height: 100%;
         width: 100%;
         border-radius: 50px;
       }
@@ -163,6 +164,20 @@
     .rentWrapper {
       display: flex;
       flex-direction: column;
+      margin: 0 auto;
+      gap: 0;
+
+      .rentImgWrapper {
+        margin: 0 0 1rem 0;
+      }
+
+      img {
+        scale: 1;
+      }
+    }
+
+    p {
+      font-size: large;
     }
   }
 }
